# GREXIS

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  index.html  secret_patterns.json  start.ps1  start.sh
api/: Dockerfile  pyproject.toml
api/src/grexis/: deps.py  main.py
api/src/grexis/admin/: auth.py  metrics.py  routes.py
api/src/grexis/cli/: seed.py
api/src/grexis/db/: postgres.py  qdrant.py  redis.py
api/src/grexis/lib/: audit.py  config.py  embed.py  logging.py
api/src/grexis/mcp/: query_solutions.py  register_agent.py  server.py  submit_feedback.py  submit_problem.py  submit_solution.py
api/src/grexis/scheduler/: aggregation.py  answer_agent.py  clustering.py  decay.py  diversity.py  jobs.py  pending_index.py  sandbox.py
api/src/grexis/services/: duplicates.py  edges.py  federation.py  rate_limit.py  scanner.py  search.py  tokens.py  trust.py
api/tests/unit/: test_audit.py  test_auth.py  test_config.py  test_duplicates.py  test_edges.py  test_embed.py  test_federation.py  test_mcp_tools.py  test_postgres.py  test_qdrant.py  test_redis.py  test_scanner.py  test_search.py  test_seed.py  test_tokens.py  test_trust.py
cli/: client.py  grexis_test_agent.py  reporter.py
cli/scenarios/: adversarial.py  ban_enforcement.py  cross_environment.py  duplicate_detection.py  error_resilience.py  lifecycle.py  recovery.py  smoke.py  trust_evolution.py
data/: seed_loader.py
data/seed/: auth_failures.json  dependency_errors.json  (+8 more)
db/: init.sql
web/: index.html  package-lock.json  package.json  vite.config.ts
(+34 files in other folders)
