[project]
name = "grexis"
version = "0.3.0"
description = "GREXIS — Semantic Resolution Graph for AI Agents"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "qdrant-client>=1.12.0",
    "redis[hiredis]>=5.2.0",
    "onnxruntime-gpu>=1.20.0",
    "transformers>=4.46.0",
    "tokenizers>=0.20.0",
    "scikit-learn>=1.6.0",
    "nltk>=3.9.0",
    "apscheduler>=3.10.0",
    "mcp>=1.0.0",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.10.0",
    "httpx>=0.28.0",
    "openai>=1.55.0",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
cpu = [
    "onnxruntime>=1.20.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.mypy]
python_version = "3.12"
strict = true
